feat: Add a conclusion
Signed-off-by: Urtix <es.perevalov@mail.ru>

--- a/task5.ipynb
+++ b/task5.ipynb
@@ -511,11 +511,28 @@
    },
    "source": [
     "На данных диаграммах представлена зависимость времени выполнения алгоритма в секундах от выбранного регулярного\n",
-    "выражения для разных представлений матриц. Как можно заметить, с увеличением числа стартовых вершин увеличевается и время выполнения программы, не зависимо от того, находим достижимость между всеми парами вершин или для каждой из заданного множества стартовых. Это связана с тем, что производительность работы ms_bfs_based_rpq ухудшается с увеличением множества стартовых вершин. \n",
+    "выражения для разных представлений матриц. Как можно заметить, с увеличением числа стартовых вершин увеличевается и время выполнения программы, не зависимо от того, находиться ли достижимость между всеми парами вершин или для каждой из заданного множества стартовых. Это связана с тем, что производительность работы ms_bfs_based_rpq ухудшается с увеличением множества стартовых вершин. \n",
     "\n",
-    "Также видно, что при 10% для разных типов матриц результаты схожи, но можно заметить что изначально лучший результат показывает lil_matrix. Тем не менее с ростом числа вершин lil_matrix начинает проигрывать doc_matrix. Из этого можно сделать вывод, что для небольших графов (<=2000 вершин) лучше подходит lil_matrix, но с ростом графа производительность по сравнению с doc_matrix будет падать.\n",
+    "10% Стартовых вершин\n",
     "\n",
-    "При 30% более подходящими вариантами становятся csr_matrix и doc_matrix, а lil_matrix с ростом количества вершин подходит заметно хуже. Поэтому с ростом отношения числа стартовых вершин ко всем вершинам предпочтение стоит отдавать именно первым двум представлениям матриц.\n",
+    "1) Достижимость между всеми парами вершин.\n",
+    "\n",
+    "    Видно, что для разных типов матриц результаты схожи, но можно заметить что для малого графа лучший результат для достижимость между всеми парами вершин показывает csr_matrix. Тем не менее с ростом числа вершин csr_matrix начинает проигрывать lil_matrix. Из этого можно сделать вывод, что для небольших графов (<=1300 вершин) лучше подходит csr_matrix, но с ростом графа производительность по сравнению с lil_matrix будет падать. \n",
+    "\n",
+    "2) Достижимость для каждой из заданного множества стартовых вершин. \n",
+    " \n",
+    "    Для разных типов матриц можно заметить что для малого графа лучший результат данной задачи у csc_matrix. Тем не менее с ростом числа вершин csс_matrix начинает проигрывать lil_matrix. На большом же графе можно увидеть что лучше всего подходит doc_matrix. Из этого можно сделать вывод, что для небольших графов (<=1300 вершин) лучше подходит csc_matrix, при количестве вершин от 1300 до 6000 производительность по сравнению с lil_matrix будет падать, когда же их число превышает 6000, лучше выбрать doc_matrix.\n",
+    "\n",
+    "\n",
+    "30% стартовых вершин \n",
+    "\n",
+    "1) Достижимость между всеми парами вершин.\n",
+    "\n",
+    "    Для малого графа более подходящими вариантами становятся csr_matrix. Но с ростом числа вершин разница становится менее заметна, тем ни менее csr_matrix начинает показывать себя немного хуже чем doc_matrix. Если вершин меньше 1300, стоит отдавать предпочтение csr_matrix, В ином же случае лучше будет выбрать doc_matrix.\n",
+    "\n",
+    "2) Достижимость для каждой из заданного множества стартовых вершин. \n",
+    "\n",
+    "    Для малого графа лучше всего подходит csc_matrix. В остальном результат схож с достижимость между всеми парами вершин для 30%. Если вершин меньше 1300, стоит отдавать предпочтение csc_matrix, В ином же случае лучше будет выбрать doc_matrix.\n",
     "\n",
     "#### 2. Начиная с какого размера стартового множества выгоднее решать задачу для всех пар и выбирать нужные?"
    ]
@@ -567,7 +584,22 @@
     "id": "ENKjfP0AMLS8"
    },
    "source": [
-    "Из полученных данных можно сделать вывод, что c ростом числа стартовых вершин растет и время работы алгоритма. Поэтому чем их меньше, тем лучше это скажется на скорость выполнения. Такой эффект можно объяснить прямой зависимостью числа матричных вычислений от количества начальных значений в алгоритме достижимости с регулярными ограничениями с несколькими стартовыми вершинами на основе multiple source BFS через линейную алгебру. Из этого можно сделать выывод, что выгоднее решать задачу для всех пар когда количество стартовых вершин не превышает 5% от числа всех вершин."
+    "Из полученных данных можно сделать вывод, что c ростом числа стартовых вершин растет и время работы алгоритма. Поэтому чем их меньше, тем лучше это скажется на скорость выполнения. Такой эффект можно объяснить прямой зависимостью числа матричных вычислений от количества начальных значений в алгоритме достижимости с регулярными ограничениями с несколькими стартовыми вершинами на основе multiple source BFS через линейную алгебру. Из этого можно сделать вывод, что выгоднее решать задачу для всех пар когда количество стартовых вершин не превышает 5% от числа всех вершин."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Вывод\n",
+    "1) Какое представление разреженных матриц и векторов лучше подходит для каждой из решаемых задач?\n",
+    "\n",
+    "    Для данной задачи лучше стоит выбрать csr_matrix если количество вершин в графе не превышает 1300. Если их число выше, но при этом стартовых вершин около 10%, то подойдет lil_matrix. Если же их 30% и больше, то в этом случае стоит выбрать doc_matrix.\n",
+    "\n",
+    "2. Начиная с какого размера стартового множества выгоднее решать задачу для всех пар и выбирать нужные?\n",
+    "\n",
+    "    Выгоднее решать задачу для всех пар когда количество стартовых вершин не превышает 5% от числа всех вершин. Это объясняется прямой зависимостью числа матричных вычислений от количества начальных значений в алгоритме достижимости с регулярными ограничениями с несколькими стартовыми вершинами на основе multiple source BFS через линейную алгебру.\n",
+    "    \n"
    ]
   }
  ],
